--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "@react-oauth/google": "0.7.3",
     "@tanstack/react-query": "^5.4.3",
     "@types/js-cookie": "^3.0.5",
+    "@types/react-html-parser": "^2.0.6",
     "add": "^2.0.6",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
+    "file-saver": "^2.0.5",
     "file-type": "^18.7.0",
     "gapi-script": "^1.2.0",
     "js-cookie": "^3.0.5",
@@ -29,12 +32,15 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.47.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "yarn": "^1.22.19",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
