--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
+    "push.js": "^1.0.12",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
@@ -42,6 +43,7 @@
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "rehype-sanitize": "^6.0.0",
+    "socket.io-client": "^4.7.2",
     "yarn": "^1.22.19",
     "yup": "^1.3.2"
   },
