--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@tanstack/react-query": "^5.4.3",
     "@types/js-cookie": "^3.0.5",
     "@types/react-html-parser": "^2.0.6",
-    "@uiw/react-md-editor": "^4.0.1",
     "add": "^2.0.6",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
@@ -32,6 +31,7 @@
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "push.js": "^1.0.12",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
@@ -40,9 +40,9 @@
     "react-hook-form": "^7.47.0",
     "react-html-parser": "^2.0.2",
     "react-iframe": "^1.8.5",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
-    "rehype-sanitize": "^6.0.0",
     "socket.io-client": "^4.7.2",
     "yarn": "^1.22.19",
     "yup": "^1.3.2"
