--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-html-parser": "^2.0.6",
     "add": "^2.0.6",
     "axios": "^1.6.0",
+    "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
     "file-saver": "^2.0.5",
     "file-type": "^18.7.0",
@@ -33,6 +34,7 @@
     "push.js": "^1.0.12",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
