--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "add": "^2.0.6",
     "axios": "^1.6.0",
     "chart.js": "^4.4.1",
+    "dagre": "^0.8.5",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "file-saver": "^2.0.5",
     "file-type": "^18.7.0",
+    "framer-motion": "^11.1.3",
     "gapi-script": "^1.2.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
@@ -44,12 +47,16 @@
     "react-iframe": "^1.8.5",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^9.1.3",
+    "reactflow": "^11.10.4",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
     "yarn": "^1.22.19",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/dagre": "^0.7.52",
     "@types/file-saver": "^2.0.7",
     "@types/jquery": "^3.5.29",
     "@types/lodash": "^4.14.202",
@@ -57,6 +64,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
