--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "push.js": "^1.0.12",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.12.1",
     "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
@@ -53,7 +54,8 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
     "yarn": "^1.22.19",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/dagre": "^0.7.52",
@@ -63,6 +65,7 @@
     "@types/node": "^20.8.6",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.15",
+    "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18.2.7",
     "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
