--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@mui/material": "^5.15.18",
     "@mui/x-date-pickers": "^7.5.0",
     "@react-oauth/google": "0.7.3",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf/renderer": "^3.4.4",
     "@tanstack/react-query": "^5.4.3",
     "@types/js-cookie": "^3.0.5",
     "@types/react-html-parser": "^2.0.6",
@@ -37,6 +40,7 @@
     "material-react-table": "^2.13.0",
     "nprogress": "^0.2.0",
     "pako": "^2.1.0",
+    "pdfjs-dist": "^4.3.136",
     "push.js": "^1.0.12",
     "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
