--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "file-type": "^18.7.0",
     "framer-motion": "^11.1.3",
     "gapi-script": "^1.2.0",
+    "hls.js": "^1.5.11",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "material-react-table": "^2.13.0",
@@ -62,6 +63,7 @@
     "reactflow": "^11.10.4",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
+    "video.js": "^8.12.0",
     "xlsx": "^0.18.5",
     "yarn": "^1.22.19",
     "yup": "^1.3.2",
