--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^9.1.3",
     "reactflow": "^11.10.4",
+    "sass": "^1.77.6",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
     "video.js": "^8.12.0",
